Fix location-list__item link text-overflow styles to trim on mobile

--- a/src/scss/modules/_branch-addresses.scss
+++ b/src/scss/modules/_branch-addresses.scss
@@ -36,7 +36,7 @@
 
     // box model
     margin-bottom: 40px;
-    margin-right: 25px;
+    margin-right: -20px;
 
     @include atTablet {
         // box model
